<resources>
    <string name="app_name">质检助手</string>
    <string name="surf">看一看</string>
    <string name="workplace_input_hint">请输入机台号</string>
    <string name="update_config">正在更新配置信息..</string>
    <string name="login_operatorId_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_button_label">登录</string>
    <string name="login_switchOn">自动登录</string>
    <string name="action_logOut">切换账号</string>
    <string name="action_switchScene">切换场景</string>
    <string name="chart_scrollOn">自动滚动</string>
    <string name="chart_scrollOff">手动滚动</string>
    <string name="input_prefill"></string>
    <string name="qualityTest">注塑物料品质异常</string>
    <string name="label_assemblyLog">装配品质异常</string>
    <string name="badLogCode">      输入异常代码 </string>
    <string name="action_resetConfig">更新配置</string>
    <string name="action_viewReport">查看报表</string>
    <string name="hint_barCode">录入物料条码</string>
    <string name="label_materialModel">规格</string>
    <string name="label_materialName">名称</string>
    <string name="label_operatorID">员工号</string>
    <string name="label_lineNumber">线别</string>
    <string name="label_productModel">产品型号</string>
    <string name="label_note">备注</string>
    <string name="label_date">日期</string>
    <string name="label_timePeroid">时段</string>
    <string name="action_resetView">重置页面</string>
    <string name="action_hide">隐藏</string>
    <string name="label_workplace">机台号</string>
    <string name="badItemNum_label">异常数</string>
    <string name="label_remark">备注</string>
    <string name="label_dimensionLog">尺寸测量记录</string>
    <string name="label_tourInspection">注塑巡检</string>
    <string name="label_moldCavity">模穴</string>
    <string name="label_actualCycle">实际周期</string>
    <string name="label_standardCycle">标准周期</string>
    <string name="label_class">班别</string>
    <string name="date_picker_view_year">年</string>
    <string name="date_picker_view_month">月</string>
    <string name="date_picker_view_day">日</string>
    <string name="label_cancel">取消</string>
    <string name="label_confirm">确定</string>
    <string name="selectPeriod">选择时段</string>
    <string name="label_preassembly">试组装</string>
    <string name="label_shockTest">冲击测试</string>
    <string name="label_nozzleRatio">水口比例</string>
    <string name="label_sampleSize">抽样数: </string>
    <string name="label_numberOfDefective">不良数: </string>
    <string name="label_percentageOfDefective">不良率: </string>
    <string name="label_ok">OK</string>
    <string name="label_ng">NG</string>
    <string name="label_totalProduction">生产总数</string>
    <string name="label_finalJudgment">最终判定</string>
    <string name="label_apperanceQC">外观检验</string>
    <string name="hint_standardCycle">标准周期(可不填)</string>
    <string name="hint_actualCycle">请输入实际周期</string>
    <string name="promot_apperanceQC">显示记录板</string>
    <string name="hint_totalProduction">请输入生产总数</string>
    <string name="label_reasonOfDefective">造成不良原因</string>
    <string name="pleaseSelect">请选择</string>
    <string name="label_accept">接受</string>
    <string name="no_close">未停机</string>
    <string name="promot_preassembly">该时段有做试组装</string>
    <string name="label_Judgment">判定:</string>
    <string name="promot_shockTest">需要做冲击测试</string>
    <string name="action_complete">完成</string>
    <string name="label_solution">解决方法</string>
    <string name="label_dimenLog">尺寸检验</string>
    <string name="label_traceResult">结果追踪</string>
    <string name="label_upperLimit">上限 </string>
    <string name="label_lowerLimit">下限 </string>
    <string name="hint_standardDimen">请输入规格 </string>
    <string name="hint_upperOffset">上公差 </string>
    <string name="hint_lowerOffset">下公差 </string>
    <string name="label_useGuage">试检具</string>
    <string name="label_newDimen">添加新的尺寸</string>
    <string name="hint_moldNo">请输入模号</string>
    <string name="label_moldNo">模号</string>
    <string name="label_tong">通</string>
    <string name="label_end">止</string>
    <string name="label_pinGauge">针规</string>
    <string name="label_ruler">卡尺</string>
    <string name="inter_jiajian">±</string>
    <string name="label_newStuff">是新料</string>
    <string name="label_gaugeType">检验方式</string>
    <string name="label_hardnessGauge">硬度</string>
    <string name="label_feelerGauge">塞尺</string>
    <string name="hint_search">查询</string>
    <string name="action_viewHistory">历史记录</string>
    <string name="empty_data_prompt">没有找到符合条件的结果</string>
    <string name="empty_search_prompt">请输入机台号查询</string>
    <string name="empty_load_prompt">正在查询</string>
    <string name="empty_offline_prompt">网络连接异常</string>
    <string name="label_viewHistory">巡检/尺寸测量记录</string>
    <string name="label_closeStatus">停机情况</string>
    <string name="label_disposal">批号处置</string>
    <string name="label_batchSubmission">送检数量</string>
    <string name="hint_batchSubmission">请输入送检数量</string>
    <string name="action_viewCaution">不良警示图</string>
    <string name="viewSop">警示图及图纸</string>
    <string name="empty_sop_prompt">开卷有益</string>
    <string name="text_package">组件</string>
    <string name="text_body">本体</string>
    <string name="label_type">类型</string>
</resources>
