<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_6"
    android:layout_marginBottom="@dimen/dp_2"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dp_2"
    app:cardElevation="@dimen/dp_2"
    app:cardUseCompatPadding="false"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/groupItem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/dp_8"
            android:drawableStart="@mipmap/ic_dimen_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <View
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:background="@mipmap/ic_del"
            app:layout_constraintTop_toTopOf="@+id/groupItem_title"
            app:layout_constraintBottom_toBottomOf="@+id/groupItem_title"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_standardDimen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_standardDimen"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/input_upperLimit"
            app:layout_constraintBottom_toBottomOf="@+id/input_lowerLimit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_inter"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_standardDimen"
                android:inputType="numberDecimal"
                android:gravity="end"
                android:background="@drawable/shape_input_box"
                android:nextFocusDown="@+id/edit_upperOffset"
                android:layout_marginStart="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_inter"
            android:text="@string/inter_jiajian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="@+id/input_upperLimit"
            app:layout_constraintBottom_toBottomOf="@+id/input_lowerLimit"
            app:layout_constraintEnd_toStartOf="@+id/edit_upperOffset"
            app:layout_constraintStart_toEndOf="@+id/input_standardDimen"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_upperOffset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/shape_input_box"
            android:drawableStart="@mipmap/ic_upper_left"
            android:nextFocusDown="@+id/edit_lowerOffset"
            android:hint="@string/hint_upperOffset"
            android:layout_marginTop="@dimen/sp_12"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/input_upperLimit"
            app:layout_constraintBottom_toTopOf="@+id/edit_lowerOffset"
            app:layout_constraintStart_toEndOf="@+id/text_inter"
            app:layout_constraintEnd_toStartOf="@+id/img_bridge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_lowerOffset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/shape_input_box"
            android:drawableStart="@mipmap/ic_lower_left"
            android:hint="@string/hint_lowerOffset"
            android:nextFocusDown="@+id/edit_upperLimit"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/edit_upperOffset"
            app:layout_constraintStart_toStartOf="@+id/edit_upperOffset"
            app:layout_constraintEnd_toEndOf="@+id/edit_upperOffset"
            app:layout_constraintBottom_toBottomOf="@+id/input_lowerLimit"
            />
        <ImageView
            android:id="@+id/img_bridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_bridge"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/input_upperLimit"
            app:layout_constraintBottom_toBottomOf="@+id/input_lowerLimit"
            app:layout_constraintStart_toEndOf="@+id/edit_upperOffset"
            app:layout_constraintEnd_toStartOf="@+id/input_upperLimit"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_upperLimit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_upperLimit"
            android:layout_marginStart="@dimen/dp_2"
            android:textColorHint="@color/pink"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/groupItem_title"
            app:layout_constraintStart_toEndOf="@+id/img_bridge"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_upperLimit"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/edit_lowerLimit"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_lowerLimit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_lowerLimit"
            android:textColorHint="@color/green5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/input_upperLimit"
            app:layout_constraintStart_toStartOf="@+id/input_upperLimit"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_lowerLimit"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_gaugeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gaugeType"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_12"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_lowerLimit"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_ruleGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ruler"
            android:textColor="@color/holo_text"
            android:textSize="@dimen/sp_18"
            android:drawableEnd="@mipmap/ic_selectend"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toEndOf="@+id/label_gaugeType"
            app:layout_constraintTop_toTopOf="@+id/label_gaugeType"
            app:layout_constraintBottom_toBottomOf="@+id/label_gaugeType"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_pinGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pinGauge"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_text"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toEndOf="@+id/text_ruleGauge"
            app:layout_constraintTop_toTopOf="@+id/label_gaugeType"
            app:layout_constraintBottom_toBottomOf="@+id/label_gaugeType"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_noDimenGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_useGuage"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_text"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toEndOf="@+id/text_pinGauge"
            app:layout_constraintTop_toTopOf="@+id/label_gaugeType"
            app:layout_constraintBottom_toBottomOf="@+id/label_gaugeType"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_hardnessGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hardnessGauge"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_text"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toEndOf="@+id/text_noDimenGauge"
            app:layout_constraintTop_toTopOf="@+id/label_gaugeType"
            app:layout_constraintBottom_toBottomOf="@+id/label_gaugeType"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_feelerGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_feelerGauge"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_text"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toEndOf="@+id/text_hardnessGauge"
            app:layout_constraintTop_toTopOf="@+id/label_gaugeType"
            app:layout_constraintBottom_toBottomOf="@+id/label_gaugeType"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_dimenChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            app:layout_constraintTop_toBottomOf="@+id/label_gaugeType"
            app:layout_constraintBottom_toTopOf="@+id/bar_judgement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        </androidx.recyclerview.widget.RecyclerView>
        <include
            android:id="@+id/bar_judgement"
            layout="@layout/bar_judgement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_dimenChild"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>