<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/label_finalJudgment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:singleLine="true"
        android:text="@string/label_Judgment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/holo_title"
        app:layout_constraintEnd_toStartOf="@+id/radioBtn_ok"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_newDimenInput"
        app:layout_constraintBottom_toBottomOf="@+id/btn_newDimenInput"
        />
    <RadioButton
        android:id="@+id/radioBtn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_ok"
        android:textColor="@color/holo_purple"
        android:singleLine="true"
        android:checked="true"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/label_finalJudgment"
        app:layout_constraintTop_toTopOf="@+id/btn_newDimenInput"
        app:layout_constraintBottom_toBottomOf="@+id/btn_newDimenInput"
        app:layout_constraintEnd_toStartOf="@+id/radioBtn_ng"
        />
    <RadioButton
        android:id="@+id/radioBtn_ng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/label_ng"
        android:singleLine="true"
        android:textColor="@color/over_color"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioBtn_ok"
        app:layout_constraintTop_toTopOf="@+id/btn_newDimenInput"
        app:layout_constraintBottom_toBottomOf="@+id/btn_newDimenInput"
        app:layout_constraintEnd_toStartOf="@+id/btn_newDimenInput"
        />
    <ImageButton
        android:id="@+id/btn_newDimenInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:src="@mipmap/ic_newinput"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/radioBtn_ng"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>