<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <com.furja.qc.view.YearWheelView
        android:id="@+id/wv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/date_picker_view_margins"
        android:layout_marginStart="@dimen/date_picker_view_margins"
        app:wv_textSize="@dimen/sp_22"
        app:wv_curved="true"
        app:wv_showDivider="true"
        app:wv_selectedRectColor="@color/selectRectColor"
        app:wv_dividerColor="@color/divider"
        app:wv_drawSelectedRect="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/date_picker_view_margins"
        android:layout_marginLeft="@dimen/date_picker_view_margins"
        android:layout_marginRight="@dimen/date_picker_view_margins"
        android:layout_marginStart="@dimen/date_picker_view_margins"
        android:text="@string/date_picker_view_year"
        tools:textSize="20sp"
        android:id="@+id/tv_year"/>

    <com.furja.qc.view.MonthWheelView
        android:id="@+id/wv_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:wv_cyclic="true"
        app:wv_textSize="@dimen/sp_22"
        app:wv_curved="true"
        app:wv_showDivider="true"
        app:wv_selectedRectColor="@color/selectRectColor"
        app:wv_dividerColor="@color/divider"
        app:wv_drawSelectedRect="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/date_picker_view_margins"
        android:layout_marginLeft="@dimen/date_picker_view_margins"
        android:layout_marginRight="@dimen/date_picker_view_margins"
        android:layout_marginStart="@dimen/date_picker_view_margins"
        android:text="@string/date_picker_view_month"
        tools:textSize="20sp"
        android:id="@+id/tv_month"/>

    <com.furja.qc.view.DayWheelView
        android:id="@+id/wv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="0dp"
        app:wv_textSize="@dimen/sp_22"
        app:wv_curved="true"
        app:wv_showDivider="true"
        app:wv_cyclic="true"
        app:wv_selectedRectColor="@color/selectRectColor"
        app:wv_dividerColor="@color/divider"
        app:wv_drawSelectedRect="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_picker_view_day"
        tools:textSize="20sp"
        android:id="@+id/tv_day"/>
</merge>