<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical">
    <com.furja.qc.view.CleanableEditText
        android:id="@+id/edit_barCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:background="@drawable/shape_input_bg"
        android:singleLine="true"
        android:drawablePadding="@dimen/dp_2"
        android:hint="@string/hint_barCode"
        android:imeOptions="actionDone"
        android:drawableEnd="@mipmap/ic_barcode_right" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/materialInfo"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/linear_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/label_materialName"
                android:text="@string/label_materialName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_materialName"
                app:layout_constraintTop_toTopOf="@+id/text_materialName"
                app:layout_constraintBottom_toBottomOf="@+id/text_materialName"
                />
            <TextView
                android:id="@+id/text_materialName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_materialName"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_name"
            >
            <TextView
                android:id="@+id/label_materialModel"
                android:text="@string/label_materialModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:layout_constraintTop_toTopOf="@+id/text_materialModel"
                app:layout_constraintBottom_toBottomOf="@+id/text_materialModel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_materialModel"
                />
            <TextView
                android:id="@+id/text_materialModel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:textColor="@color/black"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/label_materialModel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_materialName"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
